Modified css (and css class in character.html) so that the layout doesn't break when resizing the window. Currently, layout is a fixed 800px wide. Not very useful for mobile but fits most if not all desktop applications. Note that the scrollbar acts weird when resizing the window to less than 800px wide (not a problem on mobile)
Also note that I added css class .navbar-nav in _base.css, which overrides
maxcdn.bootstrap's display: block; into display: inline-block; (for
.navbar-nav > li) This is for the navbar at the top.

--- a/src/web/static/local/css/_base.css
+++ b/src/web/static/local/css/_base.css
@@ -51,6 +51,27 @@ a:focus {
   padding:0 0.4ch;
 }
 
+.sidebar-left, .content {
+    display: inline-block;
+    float: left;
+    clear: both;
+    height: 100%;
+}
+
+.sidebar-left {
+    width: 300px;
+}
+
+.navbar-nav > li {
+    display: inline-block;
+}
+
+.content {
+    width: 500px;
+    position: relative;
+    left: 300px;
+}
+
 @media screen {
     #printSection {
         display: none;
